# open_drive_Computer_vision_project

./: MLOPS_ONEPAGER.md  README.md  add_wandb.py  doctor.py  environment.yml  eval_bev_visualise.py  eval_full_metrics_fixed.py  eval_metrics_full.py  eval_nuscenes_mini_ckpt_residual.py  eval_robustness_trust.py  eval_trust_ablation.py  eval_trust_ablation_debug.py  live_demo.py  live_demo_webcam.py  plot_robustness_curves.py  pyproject.toml  requirements-freeze.txt  run_smoke.sh  train_v10_bev128.py  train_v11_temporal.py  train_v12_geolift.py  train_v9_lidar_depth.py
configs/: default.yaml
scripts/debug/: check_bev_v8.py
scripts/eval/: eval_camera_dropout.py  eval_cv_baseline.py  eval_worst_camera.py
scripts/train/: train_nuscenes_mini_trust.py  train_smoke.py  train_v13_3class.py  train_v14_lss.py
scripts/utils/: bench_latency.py
src/opendrivefm/datasets/: nuscenes_mini.py  nuscenes_mini_temporal.py  nuscenes_mini_v9.py  synth.py
src/opendrivefm/models/: add_vit_option.py  augmentations.py  geometry.py  model.py  model_lss_bev.py  model_v11_backup.py  model_v12_geolift.py
src/opendrivefm/robustness/: perturbations.py
src/opendrivefm/training/: lightning_module.py  lightning_module_v9.py
src/opendrivefm/utils/: visualise.py
tests/: test_model.py
